# visual-graphrewrite

./: .gitignore  CmdLineOpts.hs  Convert.hs  DataGraph.hs  Debug.hs  DeltaFunctions.hs  GraphRewrite.hs  LICENSE  Main.hs  Parser.hs  README  Rename.hs  Rewrite.hs  RewriteApp.hs  RewriteAppTypes.hs  RewriteTypes.hs  SimpleHaskell.hs  TODO  Test.hs  Visualize.hs  debug.hs  hagrat.cabal  parser.hs  ui.glade  visual-graphrewrite.cabal
GraphRewrite/: Debug.hs  Main.hs
GraphRewrite/Internal/: Convert.hs  DeltaFunctions.hs  Rename.hs  Rewrite.hs  RewriteApp.hs  RewriteTypes.hs  SimpleHaskell.hs  Test.hs
GraphRewrite/Main/: CmdLineOpts.hs  Utils.hs  Visualize.hs  Welcome.hs
sample/: CyclicDefinitions.hs  Partial.hs  SieveOfEratosthenes.hs  Test0.hs  eratosthenes.hs  fsimple.hs  let.hs  pl.hs  simple.hs
thesis/: Makefile  bevezetes.tex  cimoldal.tex  diplomamunka.tex  dokumentacio.tex  elmelet.tex  implementacio.tex  irodalomjegyzek.tex  magyar.ldf  stilus.sty  temabejelento.tex
thesis/eps/: eltecimer.eps  konfluencia.eps
thesis/figs/: arch.dot  graf_ekv_izo.dot  grw_14.dot  grw_15.dot  grw_5.dot  grw_new_28.dot  hamm_recurse.dot  hamm_share.dot  headlistlist.dot  konfluencia.dot  rwr_redir.dot  sharing1.dot  sharing2.dot
