
name:                visual-graphrewrite
version:             0.2
synopsis:            Visualize the graph-rewrite steps of a Haskell program
description:         Visualize the graph-rewrite steps of a Haskell program
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Zsolt Dollenstein
maintainer:          zsol@elte.hu
build-type:          Simple
build-Depends:       base,
                     containers,
                     value-supply,
                     lazysmallcheck,
                     haskell-src >= 1.0.1.2,
                     ipprint,
                     strict-concurrency >= 0.2.1,
                     parallel >= 1.1.0.1,
                     directory >= 1.0.0.3,
                     process >= 1.0.1.1,
                     fgl >= 5.4.2.2,
                     pretty >= 1.0.1.0,
                     gtk >= 0.10.0,
                     svgcairo >= 0.10.0,
                     cairo >= 0.10.0
build-type:          Simple
extensions:          PatternGuards
extra-source-files:  sample/egyszeru.hs,
                     sample/pl.hs,
                     sample/simple.hs,
                     sample/fsimple.hs
                     sample/eratosthenes.hs
                     TODO
                     debug.hs

executable:          rewrite
main-is:             Parser.hs
other-modules:       Rename, SimpleHaskell, Convert, RewriteApp, RewriteTypes, Rewrite, CmdLineOpts, DeltaFunctions
ghc-options:

